rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
spec:
  type: NodePort
  selector:
    app: rest-server
  ports:
    - port: 5000
      targetPort: 5000
